[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "date-shift"
version = "0.1.0"
description = "Date shifting tool for patient data in Excel spreadsheets"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "openpyxl>=3.1.0",
]

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
]
